# nemd

./: .gitignore  .gitmodules  LICENSE  README.md  premake  pytest.ini  setup.py
doc/power_point/: roadmap.txt
doc/words/: ua polym builder.docx
docs/power_point/: nemd.pptx  ~$nemd.pptx
docs/words/: 16200 atoms.docx
driver/: amorp_bldr_driver.py  dispersion_driver.py  lammps_driver.py  lmp_log_driver.py  lmp_traj_driver.py  ml_clf_driver.py  ml_clus_driver.py  ml_reg_driver.py  mol_bldr_driver.py  recip_sp_driver.py  xtal_bldr_driver.py
module/alamode/: install.sh
module/lammps/: install.sh
module/nemd/: __init__.py  alamode.py  analyzer.py  box.py  builtinsutils.py  check.py  constants.py  cru.py  dictutils.py  dist.py  envutils.py  forcefield.py  frame.py  geometry.py  jobcontrol.py  jobutils.py  jsonutils.py  lammpsdata.py  lammpsfix.py  lammpsin.py  lmpatomic.py  lmpdata.py  lmpfix.py  lmpfull.py  lmpfunc.py  lmpin.py  lmplog.py  ml.py  (+29 more)
practice/cmake/src/TestSome2/: CMakeLists.txt  License.txt  build.sh  configure.sh  install.sh  main.cpp  refs  run.sh  testsomeConfig.h.in
setup/: mac  mac_vm  ubuntu  ubuntu_install
sh/: clean_submodule  nemd_check  nemd_cover  nemd_func  nemd_isort  nemd_itest  nemd_module  nemd_pref  nemd_profile  nemd_ptest  nemd_run  nemd_setup  nemd_stest  nemd_test  nemd_venv  nemd_yapf  run_isort  run_itest  run_module  run_nemd  run_profiling  run_ptest  run_stest  run_test  run_venv  run_yapf  setup
test/: setup.csv
workflow/: ab_lmp_traj_workflow.py  cb_lmp_log_workflow.py  mb_lmp_log_workflow.py  test_workflow.py
(+2187 files in other folders)
